--- a/src/content/posts/articles/crosspost-citycrawl-1-map-and-street-generator.mdx
+++ b/src/content/posts/articles/crosspost-citycrawl-1-map-and-street-generator.mdx
@@ -43,7 +43,8 @@ tags:
 
 Какую-то часть города стоит подготовить заранее. Не волнуйтесь, много времени это не займёт. Для начала прикинем, сколько в городе будет кварталов. Не стоит выбирать большое число; в конце концов, вам придётся все эти кварталы заполнять интересным контентом. Я бы советовал взять от пяти до десяти; зависит от того, насколько вы уверены в своей креативности. Выбираем для каждого квартала свой цвет и начинаем наносить этим цветом на карту основные улицы. Для простоты запоминания и ориентации Зак предлагает рисовать кварталы в форме их номеров, вот так:
 
-![Citycrawl. Часть 1: Карта и генератор улиц, изображение №1](images/citycrawl-1-1.png)
+![Citycrawl. Часть 1: Карта и генератор улиц, изображение №1](https://cyborgsandmages.com/images/citycrawl-1-1.png)
+
 
 
 Я зашёл ещё дальше: в моей кампании кварталы складывались просто в странные и пугающие слова (DEATH, BLOOM, VOID, TWIN, etc.).
