--- a/src/content/posts/translations/kobold-press-about-spies-2.mdx
+++ b/src/content/posts/translations/kobold-press-about-spies-2.mdx
@@ -2,6 +2,7 @@
 title: Разведка империи драконов
 description: "ПЕРЕВОД второй части статьи с сайта Кобольд Пресс про создание шпионов #translate #midgard #dnd5e #gmtips" 
 date: 2023-10-22 21:00
+tags:
   - Мидгард
   - Kobold Press
   - Midgard
@@ -84,5 +85,9 @@ translator: Навыки не критуют
 Несколько лет назад великий красный змей, Визандред Пожиратель Лошадей, уничтожил флот и доки Станнасгарда. Едва эта новость достигла империи, было сочтено крайне важным завербовать это существо для участия в военных действиях. Но контакт с ним невозможен. Мехмет аль-Бахадир был недавно повышен до начальника шпионской сети Станнасгарда, и ему поручено связаться с Пожирателем Лошадей.
 
 Он слышал об искателе приключений, чей отряд погиб в драконьем пламени. Пока жрецы дварфов обрабатывали его раны, они расспросили его об этом. Мехмет планирует операцию по поиску и получению информации от этого выжившего, и мы делаем бросок 5 за информацию, 1 — за местоположение и 4 — за конфликт. После небольшой пытки информатор Мехмета сообщает, что искателя приключений держат в родовом склепе под храмом Вотана, так как это безопасное место для отдыха и исцеления. Мехмет планирует взять с собой пару украденных у местных дварфов бочоночных големов (смотрите «Кодекс существ»), чтобы они подавили любое сопротивление и обеспечили отвлекающий манёвр для побега. Однако он не очень-то хорошо обошёлся со своим информатором, и тот решил рассказать всё персонажам, что даёт им удобный повод для вмешательства.
+
+## О Мэтте Данне
+
+Мэтт Данн живет недалеко от Фредериксбурга, штат Вирджиния, со своей женой и сыном, совместно с которыми он пишет приключения. Он работает учителем, программным менеджером и писателем на полставки. Многие его достижения связаны с издательством Eastman Bonn Press, пишет он также для DMsGuild, Kobold Press и Onyx Path Publishing.
 
 [Оригинал перевода](https://vk.com/natural_twenty?w=wall-200946551_3532)
