--- a/src/content/posts/translations/kobold-press-about-spies-1.mdx
+++ b/src/content/posts/translations/kobold-press-about-spies-1.mdx
@@ -2,6 +2,7 @@
 title: Глаза империи драконов
 description: "ПЕРЕВОД первой части статьи с сайта Кобольд Пресс про создание шпионов #translate #midgard #dnd5e #gmtips" 
 date: 2023-10-22 20:00
+tags:
   - Мидгард
   - Kobold Press
   - Midgard
