--- a/src/content/posts/articles/economy-dnd-model-2.mdx
+++ b/src/content/posts/articles/economy-dnd-model-2.mdx
@@ -151,3 +151,29 @@ tags:
 ## Примечание
 
 Отдельная благодарность @dororo_ro за его комментарии и указания на ошибки, опечатки и неточности.
+
+## Используемые источники
+
+1. https://dumpstatadventures.com/the-gm-is-always-right/pricing-magic-items-part-1
+2. https://dumpstatadventures.com/the-gm-is-always-right/pricing-magic-items-part-3
+3. https://dumpstatadventures.com/the-gm-is-always-right/pricing-magic-items-part-5
+4. https://dumpstatadventures.com/the-gm-is-always-right/pricing-magic-items-part-4
+5. https://dumpstatadventures.com/the-gm-is-always-right/pricing-magic-items-part-2
+6. https://dumpstatadventures.com/the-gm-is-always-right/pricing-magic-items-part-6
+7. https://dumpstatadventures.com/the-gm-is-always-right/pricing-magic-items-part-7
+8. https://eventyrgames.com/2021/05/25/pricing-magic-items-in-5e/.
+9. https://theangrygm.com/how-to-describe-an-item/
+10. https://theangrygm.com/how-to-price-an-item/.
+11. https://theangrygm.com/magical-item-analysis-pregame/
+12. https://theangrygm.com/angrycraft-whats-in-an-item/
+13. https://www.dndbeyond.com/sources/dmg/between-adventures#DowntimeActivities
+14. https://www.dndbeyond.com/sources/erftlw
+15. https://www.dndbeyond.com/sources/phb
+16. https://www.dndbeyond.com/sources/wgte
+17. https://www.kassoon.com/dnd/5e/magic-item-prices/
+18. Wanderer’s Guide to Merchant and Magic by Eventyr Games
+19. Руководство Занатара по всему
+20. https://drive.google.com/file/d/0B8XAiXpOfz9cMWt1RTBicmpmUDg/view?resourcekey=0-ceHUken0_UhQ3Apa6g4SJA
+21. https://dmdavid.com/tag/what-is-the-typical-amout-of-treasure-awarded-in-a-fifth-edition-dungeons-dragons-campaign/
+22. https://www.enworld.org/threads/magic-item-math-of-5e.437937/
+23. https://theangrygm.com/accounting-for-magical-items/
