--- a/src/content/posts/articles/economy-dnd-model-9.mdx
+++ b/src/content/posts/articles/economy-dnd-model-9.mdx
@@ -35,5 +35,79 @@ tags:
 [Часть 10](https://cyborgsandmages.com/posts/articles/economy-dnd-model-10)
 
 ---
+Итак, давайте посмотрим на нашу систему оценки волшебных предметов и базовые положения, которые лежат в её основе.
+
+В основе всей системы лежит предположение, что мы можем свести эффекты волшебного предмета к совокупности эффектов заклинаний и если у нас есть методика оценки стоимости заклинаний, то мы сможем оценить и стоимость волшебных предметов.
+Интуитивно это исходит из того, что волшебный меч +1 и меч, на который сотворено заклинание волшебное оружие – обладают одинаковыми свойствами.
+
+При этом мы явно принимаем, что редкость и ценность предметов не являются прямо кореллирующими метриками.
+
+Для оценки стоимости заклинаний мы использовали сравнение эффекта заклинания Лечение ран с зельем лечения, стоимость которого нам известна. Таким образом мы получили стоимость свитка заклинания 1-го круга с Лечением ран (см. https://cyborgsandmages.com/posts/articles/economy-dnd-model-2#%D0%BE%D0%BF%D1%80%D0%B5%D0%B4%D0%B5%D0%BB%D0%B5%D0%BD%D0%B8%D0%B5-%D0%B1%D0%B0%D0%B7%D0%BE%D0%B2%D1%8B%D1%85-%D0%B2%D0%B5%D0%BB%D0%B8%D1%87%D0%B8%D0%BD-%D0%B2-%D1%81%D0%B8%D1%81%D1%82%D0%B5%D0%BC%D0%B5 ).
+
+Также вводятся дополнительные коэффициенты, которые учитывают:
+-	Базовую длительность заклинания;
+-	Требование настройки на предмет;
+-	Сравнительную стоимость взаимодействия с предметом (экономика действий);
+-	Требование концентрации у базового заклинания;
+-	Возможность ритуального сотворения базового заклинания
+
+В целом, каждое свойство, которое является позитивным для предмета (увеличивает длительность, дальность, область воздействия по сравнению с базовым заклинанием) увеличивает стоимость предмета в 2 раза, а каждое негативное свойство – уменьшает стоимость в два раза.
+
+Что касается зависимости стоимости заклинания от круга заклинания, то мы решили использовать кубическую степенную зависимость.
+
+Стоимость заклинания = базовая стоимость (20 зм) * круг заклинания ^ 3 (зм)
+
+
+---
 
 [Продолжение следует …](https://cyborgsandmages.com/posts/articles/economy-dnd-model-10)
+
+
+1. https://dumpstatadventures.com/the-gm-is-always-right/pricing-magic-items-part-1
+2. https://dumpstatadventures.com/the-gm-is-always-right/pricing-magic-items-part-3
+3. https://dumpstatadventures.com/the-gm-is-always-right/pricing-magic-items-part-5
+4. https://dumpstatadventures.com/the-gm-is-always-right/pricing-magic-items-part-4
+5. https://dumpstatadventures.com/the-gm-is-always-right/pricing-magic-items-part-2
+6. https://dumpstatadventures.com/the-gm-is-always-right/pricing-magic-items-part-6
+7. https://dumpstatadventures.com/the-gm-is-always-right/pricing-magic-items-part-7
+8. https://eventyrgames.com/2021/05/25/pricing-magic-items-in-5e/.
+9. https://theangrygm.com/how-to-describe-an-item/
+10. https://theangrygm.com/how-to-price-an-item/.
+11. https://theangrygm.com/magical-item-analysis-pregame/
+12. https://theangrygm.com/angrycraft-whats-in-an-item/
+13. https://www.dndbeyond.com/sources/dmg/between-adventures#DowntimeActivities
+14. https://www.dndbeyond.com/sources/erftlw
+15. https://www.dndbeyond.com/sources/phb
+16. https://www.dndbeyond.com/sources/wgte
+17. https://www.kassoon.com/dnd/5e/magic-item-prices/
+18. Wanderer’s Guide to Merchant and Magic by Eventyr Games
+19. Руководство Занатара по всему
+20. https://drive.google.com/file/d/0B8XAiXpOfz9cMWt1RTBicmpmUDg/view?resourcekey=0-ceHUken0_UhQ3Apa6g4SJA
+21. https://dmdavid.com/tag/what-is-the-typical-amout-of-treasure-awarded-in-a-fifth-edition-dungeons-dragons-campaign/
+22. https://www.enworld.org/threads/magic-item-math-of-5e.437937/
+23. https://theangrygm.com/accounting-for-magical-items/
+24. Discerning Merchant's Price Guide
+25. What They Don't Tell You About Magic Items
+26. Tales of Valiant, alpha release
+
+---
+
+[Часть 1, в которой приводился анализ базовых правил пятой редакции](https://cyborgsandmages.com/posts/articles/economy-dnd-model-1)
+
+[Часть 2, в которой наметился подход к формированию цен](https://cyborgsandmages.com/posts/articles/economy-dnd-model-2)
+
+[Часть 3, примеры оценки стоимости волшебных предметов](https://cyborgsandmages.com/posts/articles/economy-dnd-model-3)
+
+[Часть 4, альтернативный подход к ценам создания свитков и услуг заклинателей](https://cyborgsandmages.com/posts/articles/economy-dnd-model-4)
+
+[Часть 5, услуги наемников](https://cyborgsandmages.com/posts/articles/economy-dnd-model-5)
+
+[Часть 6, Tales of Valiant](https://cyborgsandmages.com/posts/articles/economy-dnd-model-6)
+
+[Часть 7, Сравнение моего подхода и Кобольд Пресс](https://cyborgsandmages.com/posts/articles/economy-dnd-model-7)
+
+[Часть 8, про зелья и свитки](https://cyborgsandmages.com/posts/articles/economy-dnd-model-8)
+
+[Часть 9](https://cyborgsandmages.com/posts/articles/economy-dnd-model-9)
+
+[Часть 10](https://cyborgsandmages.com/posts/articles/economy-dnd-model-10)
