--- a/src/content/posts/articles/economy-dnd-model-9.mdx
+++ b/src/content/posts/articles/economy-dnd-model-9.mdx
@@ -57,6 +57,36 @@ tags:
 
 Стоимость заклинания = базовая стоимость (20 зм) * круг заклинания ^ 3 (зм)
 
+При этом базовыми значениями для производных являются указанные в следующей таблице.
+
+| БОНУС | Попадание и урон | Класс защиты | Бонус к спасброскам |
+|-------|------------------|--------------|---------------------|
+| 1     | 1600             | 3000         | 3000                |
+| 2     | 6400             | 12000        | 12000               |
+| 3     | 14400            | 27000        | 27000               |
+
+
+Для эффектов и состояний
+
+| Состояние или эффект | Длительность заклинания | Круг заклинания | Стоимость эффекта |
+|----------------------|-------------------------|-----------------|-------------------|
+| Ослепление           | 1 минута                | 2               | 160               |
+| Очарование           | 1 минута                | 3               | 540               |
+| Глухота              | 1 минута                | 2               | 160               |
+| Истощение            |                         | 4               | 1280              |
+| Недееспособность     | 1 минута                | 1               | 20                |
+| Невидимость          | 1 час                   | 2               | 160               |
+| Паралич              | 1 минута                | 2               | 160               |
+| Окаменение           |                         | 6               | 4320              |
+| Отравление           | 1 раунд                 | 1               | 200               |
+| Распластанность      |                         | 1               | 20                |
+| Обездвиженность      | 1 минута                | 1               | 20                |
+| Ошеломлен            |                         | 3               | 540               |
+| Без сознания         |                         | 3               | 540               |
+| Немота               | 1 минута                | 2               | 160               |
+| Полет                | 1 минута                | 3               | 540               |
+
+
 
 ---
 
