--- a/src/content/posts/articles/economy-dnd-model-8.mdx
+++ b/src/content/posts/articles/economy-dnd-model-8.mdx
@@ -167,7 +167,35 @@ tags:
 
 и т.д.
 
+## Альтернативная оценка дополнительного урона
 
+Используя значение среднего урона от фляжки с кислотой (2к6 = 7) мы можем оценить стоимость 1 единицы урона с т.з. эффектов. Поскольку в общей части снаряжения мы также изменяем некоторые цены и новая цена фляжки с кислотой - 10 зм, то базовая стоимость единицы урона будет:
+
+10 / 7 = 1,42 зм
+
+## Повышение и установка значений характеристик
+
+Для обруча интеллекта, который устанавливает значение Интеллекта на 19, и для перчаток сил огра, которые устанавливают знвчение силы на 19 будем применять следующий подход.
+
+Базовое заклинание - улучшение характеристик, 2-й круг. В старых редакциях оно увеличивало значение характеристики на 1к4 - в среднем 2.5. Примем, что это заклинание аналогично увеличению характеристики на 2.
+
+Тогда стоимость предмета увеличивающего при ношении характеристику на 2 = 160*10=1600 зм, с учетом настройки - 1600\*0,75=1200 зм, или 1200 зм за единицу бонуса.
+
+Тогда стоимость предмета устанавливающего характеристику в определенное значение можем вычислить как:
+
+1200 \* (1+2+3+4) = 12 000 зм
+
+А для поясов силы великанов
+
+21 Сила = 1200 \* 15 \* 2 = 36000 зм
+23 Сила = 1200 \* 21 \* 2 = 50400 зм
+25 Сила = 1200 \* 28 \* 2 = 73200 зм
+27 сила = 1200 \* 36 \* 2 = 86400 зм
+29 сила = 1200 \* 45 \* = 108000 зм
+
+Следовательно, стоимость книжек повышающих характеристики может быть определена как:
+
+1600\*10 (постоянный эффект)\* 2 (повышение свыше 18) \*2 (увеличение характеристик выше 20) = 64000 зм
 
 ---
 
