--- a/src/content/posts/articles/about-mercenaries-1.mdx
+++ b/src/content/posts/articles/about-mercenaries-1.mdx
@@ -1,6 +1,6 @@
 ---
-title: Про наемных солдат
-description: "АВТОРСКАЯ СТАТЬЯ Расширенное описание особенностей наемных солдат и взаимодействия персонажей с ними #mercenaries #dnd5e #hirelings #henchmens #cored20rpg"
+title: Про солдат, наемных и не только, часть 1
+description: "АВТОРСКАЯ СТАТЬЯ Расширенное описание особенностей наемных солдат и взаимодействия персонажей с ними. Изменение стоимости найма в зависимости от различных факторов. Описание лидеров наемников и офицерских позиций #mercenaries #dnd5e #hirelings #henchmens #cored20rpg"
 date: 2023-10-23 10:00
 tags:
   - Бестиарий
@@ -18,6 +18,13 @@ tags:
 
 ---
 
+[Часть 1](https://cyborgsandmages.com/posts/articles/about-mercenaries-1)
+
+[Часть 2](https://cyborgsandmages.com/posts/articles/about-mercenaries-2)
+
+[Часть 3](https://cyborgsandmages.com/posts/articles/about-mercenaries-3)
+
+---
 ## Наемные солдаты
 
 Это группы низкоуровневых бойцов, которые нанимаются к тому, кто больше заплатит. При встрече с ними существует вероятность того, что они уже наняты и направляются на войну, встречаются с потенциальным нанимателем, открыты для найма, или возвращаются домой и пока не хотят наниматься снова.
