--- a/src/content/posts/articles/about-mercenaries-2.mdx
+++ b/src/content/posts/articles/about-mercenaries-2.mdx
@@ -313,9 +313,22 @@ tags:
 
 **Оборонительная позиция (Затраты 2 действия).** До конца следующего хода командира отряда каждый союзник по его выбору, который видит капитана, может бросить к4, когда атака попадает по нему или когда он делает спасбросок. Выпавшее число вычитается из броска атаки или прибавляется к сумме бросков спасбросков.
 
-Дополнительные статблоки приведены в нашем Бестиарии.
+Дополнительные статблоки приведены в нашем [Бестиарии](https://cyborgsandmages.com/posts/core-d20/bestiary-beginning).
+
+---
 
 В следующей части мы говорим больше об экономической составляющей - как проходит найм, что входит в условия найма, какие могут быть условия контрактов, как снарядить собственные войска и т.д.
 
 [ПРОДОЛЖЕНИЕ СЛЕДУЕТ](https://cyborgsandmages.com/posts/articles/about-mercenaries-3)
 
+---
+
+[Про наемных солдат](https://cyborgsandmages.com/posts/articles/about-soldiers)
+
+[Часть 1](https://cyborgsandmages.com/posts/articles/about-mercenaries-1)
+
+[Часть 2](https://cyborgsandmages.com/posts/articles/about-mercenaries-2)
+
+[Часть 3](https://cyborgsandmages.com/posts/articles/about-mercenaries-3)
+
+---
