--- a/src/content/posts/core-d20/bestiary-beginning.mdx
+++ b/src/content/posts/core-d20/bestiary-beginning.mdx
@@ -59,3 +59,10 @@ tags:
 
 [Искусство боя малым отрядом: Роль существ](https://cyborgsandmages.com/posts/translations/art-of-combat-small-troop-roles)
 
+[Про солдат, наемных и не только, Часть 1](https://cyborgsandmages.com/posts/articles/about-mercenaries-1)
+
+[Про солдат, наемных и не только, Часть 2](https://cyborgsandmages.com/posts/articles/about-mercenaries-2)
+
+[Про солдат, наемных и не только, Часть 3](https://cyborgsandmages.com/posts/articles/about-mercenaries-3)
+
+---
