--- a/src/content/posts/articles/about-mercenaries-2.mdx
+++ b/src/content/posts/articles/about-mercenaries-2.mdx
@@ -48,7 +48,7 @@ tags:
 
 Горные шотландцы носили луки, стрелы, двуручные мечи и щиты, но не имели доспехов. Турецкие янычары были элитными войсками, вооруженными луком и скимитаром, но не имевшими доспехов. Византийские псилосы носили составные короткие луки, ручные топоры и, если повезет, кольчужные или чешуйчатые доспехи. Венецианский лучник-страдиот (часто встречался на кораблях) обычно имел короткий лук, длинный меч и кольчато-пластинчатый доспех.
 
-**Лучник (длинный лук):** Английские и валлийские лучники представляют собой элиту лучников. Высококвалифицированные и редкие, эти лучники ценны в бою. Их также трудно набрать и дорого содержать. Лонгбоумен обычно одет в мягкие или кожаные доспехи и носит с собой длинноствольный лук с короткоствольным мечом или кортиком.
+**Лучник (длинный лук):** Английские и валлийские лучники представляют собой элиту лучников. Высококвалифицированные и редкие, эти лучники ценны в бою. Их также трудно набрать и дорого содержать. Лучник обычно одет в стеганые или кожаные доспехи и носит с собой длинный лук с коротким мечом или кинжалом.
 
 **Конный лучник:** Конные лучники обычно относятся к легкой кавалерии. Они используют короткий лук, длинный меч или скимитар и кожаные доспехи, хотя иногда надевают доспехи вплоть до кольчуг. Исторически сложилось так, что большинство конных лучников были выходцами из кочевых племен или районов с обширными равнинами.
 
@@ -70,7 +70,7 @@ tags:
 
 ### КАВАЛЕРИЯ
 
-**Тяжелая кавалерия:** Тяжелая кавалерия, как правило, являются хозяевами поля боя. Способные к мощным атакам, эти войска могут прорвать вражеский строй за одну атаку. Тяжелые конные войска носят кольчато-пластинчатые, наборные или латные доспехи и широко используют копья, боевые молоты и другое разрушительное оружие. Они ездят на тяжелых боевых конях с тяжелой доспехами, что делает их медлительными, но крайне трудно ранимыми. 
+**Тяжелая кавалерия:** Тяжелая кавалерия, как правило, являются хозяевами поля боя. Способные к мощным атакам, эти войска могут прорвать вражеский строй за одну атаку. Тяжелые конные войска носят кольчато-пластинчатые, пластинчатые или латные доспехи и широко используют копья, боевые молоты и другое разрушительное оружие. Они ездят на тяжелых боевых конях с тяжелой доспехами, что делает их медлительными, но крайне трудно ранимыми. 
 
 классический образ тяжелого кавалериста - это конный рыцарь. Такие мужчины обычно вооружены тяжелым копьем, длинным мечом и булавой. Они носят латные или пластинчатые доспехи. Лошадь - тяжелый боевой конь, одоспешенный, хотя тип доспеха может быть разным.
 
