--- a/src/content/posts/articles/about-mercenaries-2.mdx
+++ b/src/content/posts/articles/about-mercenaries-2.mdx
@@ -104,7 +104,7 @@ tags:
 
 Основную массу пехоты обычно составляет легкая пехота (также известная как легкие пехотинцы). Такие подразделения дешевы в выращивании и обучении. Большинство из них - выходцы из низших сословий. От иррегулярной пехоты их отличает (едва ли) большая дисциплинированность.
 
-Типичными представителями легкой пехоты были швейцарские и немецкие пикинеры (без доспехов, с пикой и короткой шпагой), испанские меченосцы (кожаные доспехи, короткая шпага и баклер), византийские пельтасты (мягкие доспехи, большой щит, копья и меч), даже индусские паяки (без доспехов, маленький щит и скимитар или дубина).
+Типичными представителями легкой пехоты были швейцарские и немецкие пикинеры (без доспехов, с пикой и короткой шпагой), испанские меченосцы (кожаные доспехи, короткая шпага и баклер), византийские пельтасты (стеганые доспехи, большой щит, копья и меч), даже индусские паяки (без доспехов, маленький щит и скимитар или дубина).
 
 **Средняя пехота:** Средняя пехота - это основные силы армии, они рассчитаны на то, чтобы быть сбалансированными в большинстве ситуаций. Они хорошо вооружены и бронированы, способны разбить более легкое войско и удержать свои позиции против более тяжелых войск. В их состав входят пикинеры и копьеносцы, которые хорошо противостоят конной оппозиции. Городская стража в богатых поселениях, как правило, представляет собой средние пешие войска.
 
